# data-platform-demo

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_platform/: __init__.py  assets.py  checks.py  definitions.py  resources.py  schedule.py  sql.py  transforms.py
postgres/: init.sql
scripts/: run_pipeline.py
tests/: test_checks.py  test_sql.py
